--- a/FitnessCoach/WebContent/WEB-INF/web.xml
+++ b/FitnessCoach/WebContent/WEB-INF/web.xml
@@ -31,7 +31,10 @@
      <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
      <param-value>.xhtml</param-value>
    </context-param>
-
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>sunny</param-value>
+	</context-param>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
