--- a/FitnessCoach/WebContent/WEB-INF/web.xml
+++ b/FitnessCoach/WebContent/WEB-INF/web.xml
@@ -35,6 +35,10 @@
 		<param-name>primefaces.THEME</param-name>
 		<param-value>sunny</param-value>
 	</context-param>
+	<context-param>
+    	<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
+    	<param-value>true</param-value>
+	</context-param>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
